crates/mun_codegen/src/snapshots/test__fibonacci_loop_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn fibonacci(n:int):int {\n    let a = 0;\n    let b = 1;\n    let i = 1;\n    loop {\n        if i > n {\n            return a\n        }\n        let sum = a + b;\n        a = b;\n        b = sum;\n        i += 1;\n    }\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

