crates/mun_codegen/src/snapshots/test__function_arguments_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n  a\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

define i64 @main(i64) {
body:
  ret i64 %0
}

