crates/mun_codegen/src/snapshots/test__function_arguments_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n  a\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

