crates/mun_codegen/src/snapshots/test__function_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main() {\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

